chore: amend .vscode/extensions.json in workspace root in @observerly/iris
chore: amend .vscode/extensions.json in workspace root in @observerly/iris

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,9 @@
 {
   "recommendations": [
-    "golang.go"
+    "golang.go",
+    "github.vscode-github-actions",
+    "neverik.go-critic",
+    "tamasfe.even-better-toml",
+    "ZainChen.json"
   ]
 }
